--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Cup Website</title>
+    <link rel="stylesheet" href="style.css">
+
+    <!-- font awesome link -->
+    <script src="https://kit.fontawesome.com/2cbe60e1bb.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
-    <h1>fjfjf</h1>
+    <header>
+        <div class="header-container">
+            <div class="header-title">
+                <h1>The Greatest show on the earth</h1>
+                <p>Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.</p>
+                <a class="button" href="">Watch Live <i class="fa-solid fa-greater-than"></i> </a>
+            </div>
+            <div class="header-img">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </div>
+    </header>
 </body>
 </html>
