--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <main>
         <section class="manuber-boxes-container">
             <div class="manuber-container">
-                <a href="">Upcoming Match</a>
+                <a href="http://127.0.0.1:5500/index2.html">Upcoming Match</a>
                 <a href="">All Group</a>
                 <a id="blog" href="">Blog</a>
             </div>
@@ -282,6 +282,10 @@
                 
             </div>
         </section>
+
+        <div class="view-all-link">
+            <a class="button" href="">View All</a>
+        </div>
     </main>
 </body>
 <footer>
