--- a/index2.html
+++ b/index2.html
@@ -30,7 +30,7 @@
             <div class="manuber-container">
                 <a id="blog" href="">Upcoming Match</a>
                 <a href="">All Group</a>
-                <a href="">Blog</a>
+                <a href="http://127.0.0.1:5500/index.html">Blog</a>
             </div>
 
             <div class="boxes-container2">
@@ -132,10 +132,6 @@
                 
             </div>
         </section>
-
-        <div class="view-all-link">
-            <a class="button" href="">View All</a>
-        </div>
     </main>
 </body>
 <footer>
