--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="manuber-container">
                 <a href="http://127.0.0.1:5500/index2.html">Upcoming Match</a>
                 <a href="">All Group</a>
-                <a id="blog" href="">Blog</a>
+                <a id="blog" href="http://127.0.0.1:5500/index.html">Blog</a>
             </div>
 
             <div class="boxes-container">
