--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,9 @@
         <div class="header-container">
             <div class="header-title">
                 <h1>The Greatest show on the earth</h1>
-                <p>Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.</p>
+                <div class="title-p-div">
+                    <p title="Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.">Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.</p>
+                </div>
                 <a class="button" href="">Watch Live <i class="fa-solid fa-greater-than"></i> </a>
             </div>
             <div class="header-img">
@@ -92,7 +94,6 @@
                     </div>
 
 
-
                     <div class="box2">
                         <div class="box-img2">
                             <img src="assets/germany Flag.png" alt="">
@@ -107,7 +108,6 @@
                     </div>
 
 
-
                     <div class="box2">
                         <div class="box-img2">
                             <img src="assets/germany Flag.png" alt="">
@@ -120,15 +120,8 @@
                             <p>April 01, 2023, 1.00 AM</p>
                         </div>
                     </div>
-
-
-
-
 
                 </div>
-
-
-
                 
             </div>
         </section>
