--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         <div class="header-container">
             <div class="header-title">
                 <h1>The Greatest show on the earth</h1>
-                <p>Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.</p>
+                <div class="title-p-div">
+                    <p title="Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.">Los Condores will line up in Pool D at Rugby World Cup 2023 after they overturned a 20-point aggregate deficit to beat the USA in Glendale on Saturday.</p>
+                </div>
                 <a class="button" href="">Watch Live <i class="fa-solid fa-greater-than"></i> </a>
             </div>
             <div class="header-img">
@@ -151,8 +153,6 @@
                     </div>
 
 
-
-
                     <div class="box">
                         <div class="box-img">
                             <img src="assets/Blog Image.png" alt="">
@@ -231,8 +231,6 @@
                     </div>
 
 
-
-
                     <div class="box">
                         <div class="box-img">
                             <img src="assets/Blog Image.png" alt="">
@@ -252,8 +250,6 @@
                     </div>
 
 
-
-
                     <div class="box">
                         <div class="box-img">
                             <img src="assets/Blog Image.png" alt="">
@@ -271,15 +267,9 @@
                             </div>
                         </div>
                     </div>
-
-
-
 
                 </div>
-
-
-
-                
+      
             </div>
         </section>
 
