--- a/index2.html
+++ b/index2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcoming Match</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 
     <!-- font awesome link -->
     <script src="https://kit.fontawesome.com/2cbe60e1bb.js" crossorigin="anonymous"></script>
@@ -30,7 +30,7 @@
     <main>
         <section class="manuber-boxes-container">
             <div class="manuber-container">
-                <a id="blog" href="">Upcoming Match</a>
+                <a id="blog" href="http://127.0.0.1:5500/index2.html">Upcoming Match</a>
                 <a href="">All Group</a>
                 <a href="http://127.0.0.1:5500/index.html">Blog</a>
             </div>
