--- a/index2.html
+++ b/index2.html
@@ -30,9 +30,9 @@
     <main>
         <section class="manuber-boxes-container">
             <div class="manuber-container">
-                <a id="blog" href="http://127.0.0.1:5500/index2.html">Upcoming Match</a>
+                <a id="blog" href="index2.html">Upcoming Match</a>
                 <a href="">All Group</a>
-                <a href="http://127.0.0.1:5500/index.html">Blog</a>
+                <a href="index.html">Blog</a>
             </div>
 
             <div class="boxes-container2">
