--- a/index2.html
+++ b/index2.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Upcoming Match</title>
+
+    <!-- css link  -->
     <link rel="stylesheet" href="style.css">
 
     <!-- font awesome link -->
@@ -12,6 +14,9 @@
 
 </head>
 <body>
+
+    <!-- header section start  -->
+
     <header>
         <div class="header-container">
             <div class="header-title">
@@ -26,6 +31,10 @@
             </div>
         </div>
     </header>
+
+    <!-- header section end  -->
+
+     <!-- manuber boxes container start -->
 
     <main>
         <section class="manuber-boxes-container">
@@ -126,7 +135,10 @@
             </div>
         </section>
     </main>
+
+     <!-- manuber boxes container end -->
 </body>
+
 <footer>
     <div class="footer-description">
         <h1>Goal</h1>
